Closed Bug 177968 Opened 23 years ago Closed 21 years ago

Screen names do not get imported (from ldif files)

Categories

(SeaMonkey :: MailNews: Address Book & Contacts, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: standard8)

Details

Attachments

(1 file, 1 obsolete file)

*** observed with 10-31-1.0 build *** Steps to reproduce: - export the PAB in .ldif format (have some card with screen names in there); - import the Address Book back; // note that Screen names are missing from the imported Address Book
mass re-assign.
Assignee: racham → sspitzer
Product: Browser → Seamonkey
This also happens for csv files.
Assignee: sspitzer → mail
csv import/export of screen name fields covered by bug 261882. Importing of screen names needs small fix to ldif import (recongnise the screen name field) once bug 119948 has it's first patch in. Therefore taking in advance
Assignee: mail → bugzilla
Now that we don't have as much duplicated ldif code, here's the patch to fix the importing of the screenname (we already export it). works for both tb & sm.
Attachment #188225 - Flags: superreview?(dmose)
Attachment #188225 - Flags: review?(dmose)
Comment on attachment 188225 [details] [diff] [review] Allow import of screen name from ldif files Turns out that the only use of "mozilla_aimscreenname" in the tree, according to lxr, is in a comment in nsIAddrDatabase.idl. The addressbook code itself uses "nscpaimscreenname", so let's stick with that until the LDIF schema changes land.
Attachment #188225 - Flags: superreview?(dmose)
Attachment #188225 - Flags: review?(dmose)
Attachment #188225 - Flags: review-
(In reply to comment #5) > (From update of attachment 188225 [details] [diff] [review] [edit]) > Turns out that the only use of "mozilla_aimscreenname" in the tree, according > to lxr, is in a comment in nsIAddrDatabase.idl. The addressbook code itself > uses "nscpaimscreenname", so let's stick with that until the LDIF schema > changes land. Our export table (for ldif) uses _aimscreenname with the mozilla prefixed, see http://lxr.mozilla.org/seamonkey/source/mailnews/addrbook/src/nsAddressBook.cpp# 124 That's why I used it here. Though we perhaps should also use nscpaimscreenname?
OS: Windows XP → All
Hardware: PC → All
Comment on attachment 188225 [details] [diff] [review] Allow import of screen name from ldif files As discussed on IRC see my previous comment on this bug. Requesting review again for decision later.
Attachment #188225 - Flags: superreview?(dmose)
Attachment #188225 - Flags: review?(dmose)
Attachment #188225 - Flags: review-
Comment on attachment 188225 [details] [diff] [review] Allow import of screen name from ldif files I'd like to propose that any patch that touches the attribute here should at least make us internally consistent. Since nscpaimscreenname has been used in the LDAP code for a long time, it seems reasonably likely to match what's deployed in the real world. How about we change all instances to that?
Attachment #188225 - Flags: superreview?(dmose)
Attachment #188225 - Flags: superreview-
Attachment #188225 - Flags: review?(dmose)
Attachment #188225 - Flags: review-
Although since importing can accept both versions, maybe the best thing to do is make a patch that allows both.
This patch allows importing of both nscpaimscreenname and mozilla_aimscreenname fields.
Attachment #188225 - Attachment is obsolete: true
Attachment #188855 - Flags: superreview?(dmose)
Attachment #188855 - Flags: review?(dmose)
Comment on attachment 188855 [details] [diff] [review] Allow import for nscpaimscreenname and mozilla_aimscreenname (checked in) r+sr=dmose
Attachment #188855 - Flags: superreview?(dmose)
Attachment #188855 - Flags: superreview+
Attachment #188855 - Flags: review?(dmose)
Attachment #188855 - Flags: review+
Comment on attachment 188855 [details] [diff] [review] Allow import for nscpaimscreenname and mozilla_aimscreenname (checked in) Requesting approval on minor change to import ldif files - allow us to import screen name which we currently do export via ldif. Low risk, affects sm and tb.
Attachment #188855 - Flags: approval1.8b3?
Attachment #188855 - Flags: approval-aviary1.1a2?
Comment on attachment 188855 [details] [diff] [review] Allow import for nscpaimscreenname and mozilla_aimscreenname (checked in) looks like 1.8b3/avairy1.1a2 have passed, requesting approval for 1.8b4, same comments as previous apply.
Attachment #188855 - Flags: approval1.8b4?
Attachment #188855 - Flags: approval1.8b3?
Attachment #188855 - Flags: approval-aviary1.1a2?
Attachment #188855 - Flags: approval1.8b4? → approval1.8b4+
Comment on attachment 188855 [details] [diff] [review] Allow import for nscpaimscreenname and mozilla_aimscreenname (checked in) Checked in: /cvsroot/mozilla/mailnews/addrbook/src/nsAbLDIFService.cpp,v <-- nsAbLDIFService.cpp new revision: 1.2; previous revision: 1.1
Attachment #188855 - Attachment description: Allow import for nscpaimscreenname and mozilla_aimscreenname → Allow import for nscpaimscreenname and mozilla_aimscreenname (checked in)
Fix is in, the cvs/txt/tab case will be handled in bug 261882.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Summary: Screen names do not get imported → Screen names do not get imported (from ldif files)
Verified FIXED; I checked both Netscape 7.1 and Mozilla SeaMonkey build 2005-07-15-05 on Windows XP.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: