Fixes Bug 177968 Screen names do not get imported (from ldif files). r+sr=dmose, a=asa